[package]
name = "dwm-opaque"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.48"

[dependencies]
minifb = "0.15.1"
raqote = "0.7.7"
